package com.android.ootd.ui.notifications

import NotificationRepository
import androidx.compose.ui.test.isDisplayed
import androidx.compose.ui.test.junit4.ComposeContentTestRule
import androidx.compose.ui.test.junit4.createComposeRule
import androidx.compose.ui.test.onAllNodesWithTag
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.performClick
import com.android.ootd.model.account.Account
import com.android.ootd.model.account.AccountRepositoryInMemory
import com.android.ootd.model.notifications.Notification
import com.android.ootd.model.user.User
import com.android.ootd.model.user.UserRepositoryInMemory
import com.android.ootd.ui.notifications.NotificationsScreenTestTags.BACK_BUTTON
import com.android.ootd.ui.notifications.NotificationsScreenTestTags.EMPTY_STATE_TEXT
import com.android.ootd.ui.notifications.NotificationsScreenTestTags.ENABLE_PUSH_NOTIFICATIONS
import com.android.ootd.ui.notifications.NotificationsScreenTestTags.ERROR_MESSAGE
import com.android.ootd.ui.notifications.NotificationsScreenTestTags.NOTIFICATIONS_TITLE
import com.android.ootd.utils.FirestoreTest
import kotlinx.coroutines.runBlocking
import kotlinx.coroutines.test.runTest
import org.junit.Before
import org.junit.Rule
import org.junit.Test

class NotificationsScreenTest : FirestoreTest() {
  @get:Rule val composeTestRule = createComposeRule()

  private lateinit var notificationRepository: NotificationRepository
  private lateinit var userRepositoryInMemory: UserRepositoryInMemory
  private lateinit var accountRepositoryInMemory: AccountRepositoryInMemory

  @Before
  override fun setUp() = runBlocking {
    super.setUp()
    notificationRepository = notificationsRepository
    userRepositoryInMemory = UserRepositoryInMemory()
    accountRepositoryInMemory = AccountRepositoryInMemory()
    userRepositoryInMemory.addUser(
        User(uid = currentUser.uid, username = "stefanstefan", profilePicture = ""))
    accountRepositoryInMemory.addAccount(
        Account(uid = currentUser.uid, ownerId = currentUser.uid, username = "stefanstefan"))
  }

  private fun buildComposeTestRule(
      composeTestRule: ComposeContentTestRule,
      overrideNotificationPopup: Boolean = true,
      addError: Boolean = false
  ) {

    val mockViewModel =
        NotificationsViewModel(
            notificationRepository = notificationRepository,
            userRepository = userRepositoryInMemory,
            accountRepository = accountRepositoryInMemory,
            overrideUser = true,
            testUserId = currentUser.uid,
            overrideNotificationPopup = overrideNotificationPopup)

    if (addError) {
      mockViewModel.deleteFollowRequest(
          FollowRequestItem(
              notification =
                  Notification(
                      uid = "",
                      senderId = "",
                      receiverId = "",
                      type = "",
                      content = "",
                      senderName = ""),
              User()))
    }
    composeTestRule.setContent { NotificationsScreen(viewModel = mockViewModel, testMode = false) }

    composeTestRule.waitForIdle()
  }

  @Test
  fun testNoRequestsDisplayed() = runTest {
    buildComposeTestRule(composeTestRule)
    composeTestRule.waitUntil(timeoutMillis = 5000) {
      composeTestRule.onNodeWithTag(EMPTY_STATE_TEXT).isDisplayed()
      composeTestRule.onNodeWithTag(NOTIFICATIONS_TITLE).isDisplayed()
      composeTestRule.onNodeWithTag(BACK_BUTTON).isDisplayed()
    }
  }

  @Test
  fun testErrorDisplayed() = runTest {
    buildComposeTestRule(composeTestRule, addError = true)
    composeTestRule.waitUntil(timeoutMillis = 5000) {
      composeTestRule.onNodeWithTag(ERROR_MESSAGE).isDisplayed()
    }
  }

  @Test
  fun testAllowNotificationsButton() = runTest {
    buildComposeTestRule(composeTestRule)
    composeTestRule.onNodeWithTag(ENABLE_PUSH_NOTIFICATIONS).performClick()
  }

  @Test
  fun testFollowRequestsDisplayed() = runTest {
    val notification1 =
        Notification(
            uid = "notif1",
            senderId = currentUser.uid,
            receiverId = currentUser.uid,
            type = "FOLLOW_REQUEST",
            content = "wants to follow you",
            senderName = "")

    val notification2 =
        Notification(
            uid = "notif2",
            senderId = currentUser.uid,
            receiverId = currentUser.uid,
            type = "FOLLOW_REQUEST",
            content = "wants to follow you",
            senderName = "")

    notificationRepository.addNotification(notification1)
    notificationRepository.addNotification(notification2)

    buildComposeTestRule(composeTestRule)

    composeTestRule.waitUntil(timeoutMillis = 5000) {
      composeTestRule
          .onAllNodesWithTag(NotificationsScreenTestTags.NOTIFICATION_ITEM)
          .fetchSemanticsNodes()
          .size == 2
    }
  }

  @Test
  fun testAcceptAndDeleteNotification() = runTest {
    val notification1 =
        Notification(
            uid = "notif1",
            senderId = currentUser.uid,
            receiverId = currentUser.uid,
            type = "FOLLOW_REQUEST",
            content = "wants to follow you",
            senderName = "")

    val notification2 =
        Notification(
            uid = "notif2",
            senderId = currentUser.uid,
            receiverId = currentUser.uid,
            type = "FOLLOW_REQUEST",
            content = "wants to follow you",
            senderName = "")

    notificationRepository.addNotification(notification1)
    notificationRepository.addNotification(notification2)

    buildComposeTestRule(composeTestRule)

    composeTestRule.waitUntil(timeoutMillis = 5000) {
      composeTestRule
          .onAllNodesWithTag(NotificationsScreenTestTags.NOTIFICATION_ITEM)
          .fetchSemanticsNodes()
          .size == 2
    }

    composeTestRule.onAllNodesWithTag(NotificationsScreenTestTags.ACCEPT_BUTTON)[0].performClick()

    composeTestRule.waitUntil(timeoutMillis = 5000) {
      composeTestRule
          .onAllNodesWithTag(NotificationsScreenTestTags.NOTIFICATION_ITEM)
          .fetchSemanticsNodes()
          .size == 1
    }
    composeTestRule.onAllNodesWithTag(NotificationsScreenTestTags.DELETE_BUTTON)[0].performClick()

    composeTestRule.waitUntil(timeoutMillis = 5000) {
      composeTestRule
          .onAllNodesWithTag(NotificationsScreenTestTags.NOTIFICATION_ITEM)
          .fetchSemanticsNodes()
          .isEmpty()
    }
  }
}
